fixed alignement for favicon, title and minus icon relative to each other

--- a/css/style.css
+++ b/css/style.css
@@ -130,23 +130,18 @@ textarea {
 }
 
 /* Styling for parent container of link */
-.link-container {
-  width: 10rem;
-  height: 20rem;
-  margin-top: 0.8rem;
+.quick-link-container {
+  width: 21rem;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 }
 
-/* Styling for quick links and weather element */
-.quick-link,
-.weather {
+/* Quick links element styling */
+.quick-link {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  flex-direction: column;
   width: 21rem;
   height: 4.5rem;
   background: linear-gradient(
@@ -160,17 +155,21 @@ textarea {
   transition: opacity 0.4s ease-out;
 }
 
-/* Container for quick links */
-.quick-link a {
-  text-decoration: none;
-  width: 21rem;
+.quick-link > .link-content {
+  width: 20rem;
+  height: 5rem;
+  margin-left: 1rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 /* Favicon properties */
 .quick-link img {
   width: 35px;
   height: 35px;
-  margin-left: 0.8rem;
+  margin-bottom: -2rem;
+  margin-left: -14rem;
   border-radius: 10px;
   transition: transform 0.4s ease-in-out;
 }
@@ -180,29 +179,39 @@ textarea {
   transform: scale(1.1);
 }
 
-/* Link title position */
+/* Styling for favicon, title and delete relative to each other */
+.quick-link a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: auto;
+  height: 4.1rem;
+  text-decoration: none;
+  transition: 0.4s;
+}
+
+/* Hover on link title */
 .quick-link h3 {
-  position: absolute;
-  top: 20px;
-  right: 140px;
-  margin: 0;
   transition: 0.4s;
 }
 
 .quick-link h3:hover {
-  transition: transform 0.4s ease-in-out;
   color: rgba(25, 25, 25, 0.8);
 }
 
 /* Remove link minus icon position */
 .fa-circle-minus {
-  position: absolute;
-  right: 14px;
+  width: 2rem;
+  height: 2rem;
+  margin-top: 1rem;
+  margin-right: 0.8rem;
   cursor: pointer;
 }
 
 .fa-circle-minus::before {
   color: rgba(70, 70, 70, 0.5);
+  transition: 0.4s;
 }
 
 .fa-circle-minus:hover::before {
@@ -238,6 +247,25 @@ textarea {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+/* Styling for weather element */
+.weather {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 21rem;
+  height: 4.5rem;
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 0.6)
+  );
+  backdrop-filter: blur(10px);
+  margin-bottom: 0.5rem;
+  border-radius: 10px;
+  cursor: default;
+  transition: opacity 0.4s ease-out;
 }
 
 /* Zoom weather elements */
@@ -321,10 +349,10 @@ textarea {
   outline: none;
   font-size: 1rem;
   width: 95%;
-  height: 65%;
+  height: 70%;
   resize: none;
   padding: 0.4rem;
-  margin-bottom: 1.3rem;
+  margin-bottom: 0.2rem;
 }
 
 /* Button for the quicklinks element */
@@ -452,6 +480,11 @@ textarea {
     margin-bottom: 0.5rem;
   }
 
+  /* Favicon properties */
+  .quick-link img {
+    margin-left: -15.5rem;
+  }
+
   /* Bigger weather elements */
   #weather-info-today,
   #weather-info-tomorrow,
@@ -523,7 +556,7 @@ textarea {
   }
 
   /* Unique quick link container size */
-  .link-container {
+  .quick-link-container {
     width: 10rem;
     height: 25rem;
     margin-top: 1.1rem;
@@ -534,6 +567,11 @@ textarea {
     width: 22.8rem;
     height: 5rem;
     margin-bottom: 0.5rem;
+  }
+
+  /* Favicon properties */
+  .quick-link img {
+    margin-left: -15.5rem;
   }
 
   /* Touch friendly not needed, thinner button  */
